# voyage-nexus

./: .gitignore  README.md  Untitled  csp_patch.py  data.py  download_tmspd.py  hpo.py  lambda_run.sh  main.py  models.py  observability.py  persistence.py  pyproject.toml  run.sh
Reconstruction/: band.npz  place_array.py  replot_band.py
T-MSPD/: _download_log.csv
client/: README.md  _protocol.py  app.py  pyproject.toml  serial_test.py
client/static/: monitor.css  monitor.js
client/templates/: index.html
firmware/: README.md  platformio.ini
firmware/include/: ads1299_regs.h  config.h
firmware/src/: main.cpp
model/: __init__.py  _preprocessors.py  _viewer_core.py  check_regimes.py  data.py  eval_fournum.py  infer.py  ivan_tmspd_probe.py  k_shot_tmspd_probe.py  lora_tmspd_probe.py  lorahead_tmspd_probe.py  loso.py  loso_align.py  meta_train.py  models.py  parth.sh  pretrain_tmspd_eegnet.py  pyproject.toml  row2_feature_fusion.py  row3_late_fusion.py  setup_lambda.sh  tmspd_loader.py  tmspd_smoke.py  train.py  train_feature_fusion.py  train_late_fusion.py  train_voyage_from_tmspd.py  val.py  view_data.py  visualize.py
model/Logs/Ivan_Cross_Sub/: parse_sweep.py
model/Pretraining_TMSPD/: tmspd_pretrain_overt_speech_20260625_221711.pt  tmspd_pretrain_silent_speech_20260625_232448.pt
model/Pretraining_TMSPD/checkpoints/2026-06-25_21-11-02_run_b3b9614c/: best.pt  epoch_0030.pt  last.pt
model/ablation_run/: ablate_electrodes.py  ledger.jsonl  report.md
model/static/: viewer.css  viewer.js
model/templates/: viewer.html
(+8 files in other folders)
